# lame

./: CMakeLists.txt  README.CMake.md
cmake.config/: CMakeLists.txt  config.h.in
cmake.packaging/: libmp3lame.pc.in  mp3lameConfig.cmake.in
libmp3lame/: CMakeLists.txt
